Increase memory available to the build (required for building with Eclipse 3.7+)